adding missing classes

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <div id="mocha"></div>
 
 <div id="fixtures">
-    <div data-app="myapp">
+    <div class="app" data-app="myapp">
         <div class="component one" data-component="mycomponent">
             <div class="controller" data-controller="mycontroller"></div>
             <div class="view one" data-view="myview"></div>
             <div class="view two" data-view="myview"></div>
         </div>
         <div class="component two" data-component="mycomponent">
-            <div data-controller="mycontroller"></div>
+            <div class="controller" data-controller="mycontroller"></div>
             <div class="view one" data-view="myview"></div>
             <div class="view two" data-view="myview"></div>
         </div>
@@ -23,7 +23,7 @@
             <div class="controller" data-controller="mycontroller"></div>
             <div class="view one" data-view="myview"></div>
             <div class="view two" data-view="myview">
-                <div data-controller="mycontroller"></div>
+                <div class="controller" data-controller="mycontroller"></div>
                 <div class="view one" data-view="myview"></div>
                 <div class="view two" data-view="myview"></div>
             </div>
