--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <div class="component one" data-component="mycomponent">
             <div class="controller" data-controller="mycontroller"></div>
             <div class="ignored-element">
-                <div class="view one" data-view="myviewone"></div>
-                <div class="ignored-element">
+                <div class="view one" data-view="myviewone">
                     <div class="ignored-element">
-                        <div class="view two" data-view="myviewtwo"></div>
+                        <div class="ignored-element">
+                            <div class="view two" data-view="myviewtwo"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -27,12 +28,16 @@
         </div>
         <div class="component three" data-component="mycomponent">
             <div class="controller" data-controller="mycontroller"></div>
+            <div class="controller" data-controller="mycontroller"></div>
             <div class="view one" data-view="myviewone"></div>
             <div class="view two" data-view="myviewtwo">
-                <div class="controller" data-controller="mycontroller"></div>
                 <div class="view one" data-view="myviewone"></div>
                 <div class="view two" data-view="myviewtwo">
-                    <div class="view three" data-view="myviewthree"></div>
+                    <div class="ignored-element"></div>
+                    <div class="view three" data-view="myviewthree">
+                        <div class="ignored-element"></div>
+                        <div class="ignored-element"></div>
+                    </div>
                     <div class="view four" data-view="myviewfour"></div>
                     <div class="view five" data-view="myviewfive"></div>
                 </div>
@@ -66,7 +71,8 @@ require([
 
     mocha.setup('bdd')
     require([
-        'specs/data-selector'
+        'specs/data-selector',
+        'specs/node',
     ], function() {
         mocha.run()
     })
