validating nodes via node-descriptor

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ require([
     mocha.setup('bdd')
     require([
         'specs/data-selector',
-        'specs/node',
+        'specs/node-descriptor',
     ], function() {
         mocha.run()
     })
