Managing chai dependency with NPM

--- a/test/index.html
+++ b/test/index.html
@@ -64,7 +64,7 @@ require.config({
   baseUrl: baseUrl(),
   paths: {
     underscore: '../node_modules/underscore/underscore',
-    chai: '../bower_components/chai/chai',
+    chai: '../node_modules/chai/chai',
     transform: path()
   }
 })
